# MCPWeChatOfficialAccounts

./: README.md  STARTUP_GUIDE.md  USAGE_GUIDE.md  example_usage.py  mcp_config.json  pyproject.toml  quick_fix.py  requirements.txt  weixin_spider_simple.py
articles/test_with_images_1/: test_with_images_1.json  test_with_images_1.txt
articles/像玩儿一样去做事，反复强调过很多次，别做不擅长的事情_20250702_213257/: 像玩儿一样去做事，反复强调过很多次，别做不擅长的事情_20250702_213257.json  像玩儿一样去做事，反复强调过很多次，别做不擅长的事情_20250702_213257.txt
src/mcp_weixin_spider/: __init__.py  __main__.py  client.py  main.py  server.py
