[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weixin-spider"
version = "0.1.0"
description = "MCP服务器：微信公众号文章爬虫服务"
authors = [{name = "MCP Developer", email = "dev@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "webdriver-manager>=4.0.0",
    "Pillow>=10.0.0",
    "lxml>=4.9.0"
]

[project.scripts]
mcp-weixin-spider = "mcp_weixin_spider.__main__:main"
mcp-weixin-spider-server = "mcp_weixin_spider.server:main"
mcp-weixin-spider-client = "mcp_weixin_spider.client:demo_usage"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"